# ncaa-fbs-ranking-algorithm

./: .env.example  .gitignore  CLAUDE.md  CONFIG_REFERENCE.md  OBJECTIVE.md  PROJECT_SPEC.md  README.md  config.example.json  pyproject.toml
src/algorithm/: convergence.py  diagnostics.py  game_grade.py  tiebreaker.py
src/cli/: main.py
src/data/: client.py  models.py  profiles.py  storage.py
src/ranking/: comparison.py  engine.py
src/validation/: __init__.py  consensus.py  models.py  upset_analyzer.py  validators.py
src/web/: app.py
src/web/templates/: base.html  compare.html  config.html  rankings.html  team_detail.html
src/web/templates/partials/: comparison_table.html  config_form.html  rankings_table.html
tests/: conftest.py
tests/integration/: test_api_client.py  test_engine.py  test_web.py
tests/unit/: test_cli.py  test_comparison.py  test_config_expanded.py  test_consensus.py  test_convergence.py  test_diagnostics.py  test_game_grade.py  test_models.py  test_profiles.py  test_storage.py  test_tiebreaker.py  test_upset_analyzer.py  test_validators.py
